version 3.0 (2021/08/??)

    Breaking changes:
        - non-"fast" deletion is not supported anymore. It is much slower than "fast" deletion and its usecases were very slim and are probably best served by manual reordering.
        - delete_*() does not return an iterator anymore. With fast deletion, it would always return a one-past-the-end iterator anyways, which is not too useful.

    Smaller API changes:
        - add_{face,edge,cell} take std::vector instead of a const reference
        - add_face(std::vector<HalfEdgeHandle>): A closed loop of halfedges in the correct order is required
        - adjacent_halfface_in_cell(): the given half-edge must belong to an edge of the given cell
    Improvements:
        - Various performance optimizations, targeted at faster ovm file loading
    Bugfixes:
        - Fix some dangling references

Version 2.1 (2019/09/09)
- Modern target-based CMake 3 build system
- !!!Break compatiblity with C++98, require C++11 as mininum!!!
- Renamed *T.cc into *T_impl.hh to avoid ugly problems ith several IDEs
- Fix bug in halfface reordering
- Track if garbage collection is necessary.
- Ignore non-serializable datatypes when saving properties instead of throwing exception. 
- Add support for C++11 range-for for iterator pairs
- mark vertex_cells and halfedge_cells as const
- Implement Property copy(src_idx, dst_idx) analogue of OpenMesh properties
- Append d to debug library
- Add vertex vertex iterator to iterate over one-ring of a vertex
- Add vertex face iterator to iterate over all faces incident to a vertex
- Implement ptr::make_unique and clean up pre-c++11 ifdefs.
- Disable file_converter if boost is not found.
- Make handle constructors explicit
- Made property handle constructors explicit
- Enable range iterators on MSVC
- Fix mesh copying by implementing copy constructors and clone methods
- Fix bug in edge split of tetrahedral meshes
- Ensure that halfface iterators start with a boundary halffaces when cells are deleted