@@ -3,6 +3,7 @@ version 3.0 (2021/08/??)
     Breaking changes:
         - non-"fast" deletion is not supported anymore. It is much slower than "fast" deletion and its usecases were very slim and are probably best served by manual reordering.
         - delete_*() does not return an iterator anymore. With fast deletion, it would always return a one-past-the-end iterator anyways, which is not too useful.
+        - non-const & TopologyKernel::{edge,face,cell} is not public anymore and renamed to *_mutable()
 
     Smaller API changes:
         - add_{face,edge,cell} take std::vector instead of a const reference
